# QuantumComputing

./: CMakeLists.txt  conanfile.txt  debug_priniter.hpp  debug_tree_visualize.hpp  evaluator.hpp  main.cpp  types.hpp
.github/workflows/: main.yml
binary_expressions_parser/: CMakeLists.txt  main.cpp  parser.hpp  types.hpp
sequential_logic_evaluator/: CMakeLists.txt  main.cpp
sequential_logic_evaluator/examples/: gates_with_broken_gate.txt  simple_gates_1.txt  simple_gates_2.txt  simple_gates_3.txt
third_task_trigger/: CMakeLists.txt  Logic.h  main.cpp
third_task_trigger/examples/: test.txt
